<?xml version="1.0"?>
<package format="3">
  <name>diff_drive_controller</name>
  <version>0.0.0</version>
  <description>BoxyGo diff_drive_controller</description>
  <maintainer email="boxygo.mail@gmail.com">BoxyGo Team</maintainer>
  <license>Apache-2.0</license>

  <depend>controller_manager</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>controller_manager_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>generate_parameter_library</build_depend>

  <depend>backward_ros</depend>
  <depend>controller_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rcpputils</depend>
  <depend>realtime_tools</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>hardware_interface_testing</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

